pulse-300x600/sass/global.scss
@mixin font-smoothing($value: on) {
    @if $value==on {
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
    }
    @else {
        -webkit-font-smoothing: subpixel-antialiased;
        -moz-osx-font-smoothing: auto;
    }
}

.cf:after { content: " "; display: table; }
.cf:after { clear: both; }

.pulse-wrapper {
    background-color: #ffffff;
    box-sizing: border-box;
    font-family: "FranklinITCProLight", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    overflow: hidden;
    width: 300px;
}

/*.pulse-ad-creative-wrapper {
    cursor: pointer;
    height: 250px;
    width: 300px;
}*/

.pulse-article-ad-click {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url(https://img.washingtonpost.com/wp-stat/advertising/pseudo-static/images/blank.gif);
  background-repeat: no-repeat;
}

.pulse-article-list-wrapper {
    border-radius: 0px 0px 4px 4px;
    border: 1px solid #e9e9e9;
    border-bottom-color: #d5d5d5;
    border-bottom-width: 2px;
    /*padding: 10px;*/
}

.pulse-article-list {
    list-style: none;
    margin: 0;
    padding: 0;
}

.pulse-article-list:after {
    content: "";
    display: table;
    clear: both;
}

.pulse-article-list-item {
    float: right;
    width: 100%;
}

.pulse-article-list-item.sponsor { 
    background-color: #e6e6e6;
}

.pulse-article-wrapper { 
    margin: 10px;
}

.pulse-article-label {
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    margin: 0;
    overflow: hidden;
    padding: 10px 10px 15px 10px;
}

.pulse-article-label:before {
    background-color: #2A2A2A;
    content: "";
    display: block;
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    height: 0.25rem;
    margin-bottom: 0.625rem;
    width: 2rem;
}

.pulse-article-logo {
    float: left;
    padding-left: 10px;
    width: auto;
}

.pulse-article-logo img {
    display: block;
}

.pulse-article-logo-sm { 
    position: relative;
    top: -2px;
    width: 23px;
}

.pulse-article-label-small {
    border-right: 1px solid #000000;
    float: left;
    font-family: "FranklinITCProMedium", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
    font-size: 10.25px;
    padding-right: 10px;
}

.pulse-article-thumb-wrapper {
    box-sizing: border-box;
    float: left;
    padding-right: 10px;
    width: auto;
}

.pulse-article-thumb-border { 
    border: 1px solid #f0f0f0;
}

.pulse-article-desc-wrapper {
    box-sizing: border-box;
    float: left;
    padding-right: 10px;
    width: 60%;
}

.pulse-article-number {
    color: rgb(51, 51, 51);
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 24px;
    float: left;
    margin-top: -3px;
    padding-right: 15px;
    padding-top: 0;
    width: auto;
}

.pulse-article-desc-header {
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 18px;
    line-height: 22px;
    margin: 0;
    padding: 0;
}

.pulse-article-desc-link {
    text-decoration: none;
    color: inherit;
}

.pulse-article-desc-link:hover {
    color: #2e6d9d;
}

.pulse-article-cont-link {
    margin: 10px 0 0 0;
    font-size: .7em;
}

.pulse-article-desc {
    @include font-smoothing(on);
    font-size: 15px;
    line-height: 17px;
    margin: 0;
    padding: 0;
}

.pulse-article-desc-label {
    color: #666666;
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 9px;
    font-weight: bold;
    display: block;
    line-height: 1;
    text-transform: uppercase;
    width: 100%;
}

.pulse-article-thumbnail {
    vertical-align: middle;
    width: 100%;
}

.pulse-slideshow-wrapper {
    padding-top: 10px
}

.pulse-slideshow-label {
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    margin: 5px 0;
    padding: 0px 10px 5px 10px;
    overflow: hidden;
}

.pulse-slideshow-label:before {
    background-color: #2A2A2A;
    content: "";
    display: block;
    font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    height: 0.25rem;
    margin-bottom: 0.625rem;
    width: 2rem;
}

.pulse-slides {
    margin: 0;
    width: 300px;
    height: 230px;
}

.pulse-slideshow .pulse-slide {
    text-align: center;
}

.pulse-slide-img {
    display: inline-block;
}

.pulse-slide-img {
    position: relative;
}

.pulse-slide-img-overlay {
    position: absolute;
    background: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
    top: 0;
}

.pulse-slide-desc {
    position: absolute;
    width: 75%;
    margin: 0 12.5%;
    top: 30%;
    color: #fff;
    text-align: center;
    font-weight: bold;
    font-size: 19px;
}

.pulse-slide-wp-logo {
    position: absolute;
    right: 10px;
    bottom: 10px;
}

.pulse-slideshow .slick-slider {
    margin-bottom: 0;
}

.pulse-slideshow .slick-arrow {
    font-family: "FontAwesome"
}

.pulse-slideshow .slick-arrow {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow: visible;
}

.pulse-slideshow .slick-next {
    right: 7px;
}

.pulse-slideshow .slick-prev {
    left: 7px;
}

.pulse-slideshow .slick-prev:before,
.pulse-slideshow .slick-next:before {
    font-family: inherit;
    font-size: 2em;
    line-height: 1;
    position: absolute;
    color: #e9e9e9;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.pulse-slideshow .slick-prev:before {
    content: "\f053";
}

.pulse-slideshow .slick-next:before {
    content: "\f054";
}

.pulse-footer { 
    padding: 0 0 3px 0;
    text-align: center;
}

.pulse-slideshow-footer { 
    margin: 10px 0;
    text-align: center;
}

.pulse-tracking-wrapper { 
    display: none;
}

